修复 Transmission 暂停-重启错误